<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:paddingTop="20dp"
    tools:context=".NotificationMsg">

    <!-- App header -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="About"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:textSize="35sp"
        android:fontFamily="@font/roboto_thin"
        android:id="@+id/textViewAbout"
        />

    <ImageButton
        android:id="@+id/imgButtonBackToHome"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_left"
        android:padding="20dp"
        android:layout_alignParentStart="true"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textViewAbout"
        android:fadeScrollbars="true"
        android:padding="20dp"
        android:layout_marginBottom="60dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp"
                android:background="@drawable/bg_calender">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:src="@drawable/logo_black"
                    />

                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_app"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_calender">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/about_subhamoy_name"
                    android:textColor="@color/colorPrimary"
                    />

                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_subhamoy"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_calender">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/about_kd_name"
                    android:textColor="@color/colorPrimary"
                    />

                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_kd"
                    />
            </LinearLayout>




        </LinearLayout>
    </ScrollView>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adViewAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/admob_adunit_id_test">

    </com.google.android.gms.ads.AdView>

</RelativeLayout>