<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/layoutCalender"
    android:layout_marginStart="20dp"
    android:layout_marginTop="30dp"
    android:layout_marginEnd="20dp"
    android:layout_marginBottom="20dp"
    android:background="@drawable/bg_calender"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <TextView
            android:id="@+id/profileHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/profile"
            android:textColor="@android:color/black" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="20dp">

        <TextView
            android:id="@+id/textViewStudentID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student_id"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/textViewStudentIDValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ID-12345"
            android:layout_alignParentEnd="true"
            />

        <TextView
            android:id="@+id/textViewStudentName"
            android:layout_width="wrap_content"
            android:layout_below="@+id/textViewStudentID"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/student_name"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/textViewStudentNameValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Subhamoy Karmakar"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/textViewStudentIDValue"
            android:paddingTop="10dp"
            />

        <TextView
            android:id="@+id/textViewStudentAge"
            android:layout_width="wrap_content"
            android:layout_below="@+id/textViewStudentName"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/student_age"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/textViewStudentAgeValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="28 yrs"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/textViewStudentNameValue"
            android:paddingTop="10dp"
            />

        <TextView
            android:id="@+id/textViewStudentMembership"
            android:layout_width="wrap_content"
            android:layout_below="@+id/textViewStudentAge"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/membership_validity"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/textViewStudentMembershipValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="August 2020"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/textViewStudentAgeValue"
            android:paddingTop="10dp"
            android:textColor="@color/materialRed"
            android:paddingBottom="12dp"
            />

    </RelativeLayout>

</LinearLayout>
