<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".SignIn">

    <ImageView
        android:id="@+id/logoSmall"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="120dp"
        android:src="@drawable/logo_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewAppName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_thin"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/student"
        android:textColor="@android:color/black"
        android:layout_below="@id/logoSmall"
        android:layout_marginTop="10dp"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@+id/textViewAppName"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:background="@android:color/white"
        android:paddingLeft="20dp"
        android:paddingTop="50dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="Welcome! Please Sign In!"
            android:layout_marginBottom="10dp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputPhone"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Phone"
            app:counterMaxLength="10">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="Please select your GymId"
            android:layout_marginTop="30dp"
            />

        <Spinner
            android:id="@+id/spinnerGymIDs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:autofillHints="@string/student"
            android:background="@drawable/bg_spinner"
            android:padding="15dp"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            android:backgroundTint="@color/materialRed"
            android:fontFamily="@font/roboto"
            android:text="@string/sign_in"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <TextView
        android:id="@+id/textViewCompanyName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_thin"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/initiated_by"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        />

</RelativeLayout>